# highdash

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/common/: data.rs  mod.rs  structs.rs
src/iterable/: every.rs  filter.rs  first.rs  for_each.rs  head.rs  map.rs  mod.rs  some.rs
src/string/: gstr.rs  mod.rs
src/tests/: mod.rs
src/tests/iterable/: every_test.rs  filter_test.rs  map_test.rs  mod.rs  some_test.rs
