[package]
name = "highdash"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A lodash alternative for Rust. Great package for people coming from Javascript"
homepage = "https://github.com/himanshurajora/highdash"
documentation = "https://github.com/himanshurajora/highdash"
repository = "https://github.com/himanshurajora/highdash"
readme = "README.md"
keywords = ["arraymethods", "lodash", "rustlodash", "highdash", "arraymanipulation"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
